Scrolling lists respond incorrectly if mouse is not moved #28432

Closed
opened 2011-08-30 19:45:05 +02:00 by Tom Edwards · 8 comments

%%%Add enough items to a list (e.g material slots) for it to scroll. Move the pointer over the body of the list and, without moving it further, scroll with the mouse wheel. Now click. The item your pointer was over before you scrolled will be selected. There are also glitches with the blue highlight as you scroll around.

When the pointer moves the problem disappears, so this is probably a case wm_add_notifier not being called for mouse scroll events.%%%

%%%Add enough items to a list (e.g material slots) for it to scroll. Move the pointer over the body of the list and, without moving it further, scroll with the mouse wheel. Now click. The item your pointer was over *before you scrolled* will be selected. There are also glitches with the blue highlight as you scroll around. When the pointer moves the problem disappears, so this is probably a case wm_add_notifier not being called for mouse scroll events.%%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I can confirm both issues on Ubuntu 10.04 and Blender 2.59.2 r40018
For the second issue: The full menu in the "Tool Shelf" appears too when moving the mouse cursor over the "Tool Shelf".%%%

%%%I can confirm both issues on Ubuntu 10.04 and Blender 2.59.2 r40018 For the second issue: The full menu in the "Tool Shelf" appears too when moving the mouse cursor over the "Tool Shelf".%%%

%%%Ahhh! Forget my comment above. Here was an error while trying to attach a *.blend file.

the orginal Comment is:
I can confirm the issue on Ubuntu 10.04 ; Blender 2.59.0 r39307 and 2.59.2 r40018
I attached a *.blend file for quick testing%%%

%%%Ahhh! Forget my comment above. Here was an error while trying to attach a *.blend file. the orginal Comment is: I can confirm the issue on Ubuntu 10.04 ; Blender 2.59.0 r39307 and 2.59.2 r40018 I attached a *.blend file for quick testing%%%
Member

%%%There's been a bug in X11 that sent mousemove events during scrolling (making scroll in popup menus impossible). Dunno status of this...%%%

%%%There's been a bug in X11 that sent mousemove events during scrolling (making scroll in popup menus impossible). Dunno status of this...%%%

%%%Ton, not sure i've got the same issue as Tom and Ronny, but strange behavior also easily noticeable on windows 7 64bit:

  • Create plenty of shape keys
  • Scroll to the bottom of this list
  • Click on pre-last item
  • DO NOT move mouse and start scrolling with mouse wheel in direction of top element
  • During scrolling you can easily notice, that item under cursor is always highlighted (and this highlightion isn't correct because it's not correlate to actually selected item)
  • When you scroll scrolling and without moving mouse click on item under the mouse cursor it wouldn't be selected%%%
%%%Ton, not sure i've got the same issue as Tom and Ronny, but strange behavior also easily noticeable on windows 7 64bit: - Create plenty of shape keys - Scroll to the bottom of this list - Click on pre-last item - DO NOT move mouse and start scrolling with mouse wheel in direction of top element - During scrolling you can easily notice, that item under cursor is always highlighted (and this highlightion isn't correct because it's not correlate to actually selected item) - When you scroll scrolling and without moving mouse click on item under the mouse cursor it wouldn't be selected%%%
Author

%%%Hi Sergey, that is exactly the bug.%%%

%%%Hi Sergey, that is exactly the bug.%%%

%%%Fixed in svn rev40720. Thanks for the report!%%%

%%%Fixed in svn rev40720. Thanks for the report!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#28432
No description provided.