Fix #28432: Scrolling lists respond incorrectly if mouse is not moved

Copy hardmin for LISTROW and ROW buttons when updating button
from old block due to list item index is stored in this value.